fetch recipes from backend

--- a/Backend/recipe-book-recipe/src/main/resources/application.properties
+++ b/Backend/recipe-book-recipe/src/main/resources/application.properties
@@ -9,14 +9,15 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-jwt.secret = cmVjaXBlIGJvb2sgcHJvamVjdA==
+jwt.secret = cmVjaXBlIGJvb2sgd2l0aCByZWNpcGVz
 jwt.expiration = 86400000
 
 spring.servlet.multipart.enabled = true
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
 
-upload.directory = D:/MyRecipes
+#upload.directory = D:/MyRecipes
+upload.directory=D:/Resume Projects/Recipe Book Project/Frontend/recipe-book/public
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.initialInstanceInfoReplicationIntervalSeconds=5
