--- a/Backend/recipe-book-recipe/src/main/resources/application.properties
+++ b/Backend/recipe-book-recipe/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 1002
 spring.application.name = recipe
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/recipeDB2?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/recipeBookRecipeDB?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update 
