--- a/Backend/recipe-book-shopping-list/src/main/resources/application.properties
+++ b/Backend/recipe-book-shopping-list/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name = shopping
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/recipeDB3?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/recipeBookShoppingDB?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
